# e-store-demo

./: .gitignore  README.md  railway.toml  start_nile_be.sh  start_nile_fe.sh
.claude/: settings.local.json
client/: index.html  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
client/.netlify/: netlify.toml  state.json
client/.netlify/plugins/: package-lock.json
client/public/images/products/: aethon_apex_75_metadata.json  aethon_stealth_60_metadata.json  (+218 more)
client/src/: App.vue  main.ts  style.css
client/src/router/: index.ts
client/src/services/: api.ts
client/src/stores/: cart.ts  expertise.ts  products.ts  user.ts
client/src/types/: index.ts
client/src/views/: CartView.vue  CheckoutView.vue  HomeView.vue  LoginView.vue  OrderConfirmationView.vue  OrderHistoryView.vue  ProductDetailView.vue  ProfileView.vue
server/: pyproject.toml  seed_data.py
server/data/: e-store-demo.db  nile.db
server/scripts/: add_100_products.py
server/src/: __init__.py  config.py  database.py  main.py
server/src/models/: __init__.py  cart.py  expertise.py  order.py  product.py  user.py
server/src/prompts/experts/: shopping_expert_streaming_system_prompt.md  shopping_expert_user_prompt.md
server/src/routers/: __init__.py  auth.py  cart.py  expertise.py  home.py  orders.py  products.py
server/src/schemas/: __init__.py  cart.py  expertise.py  home_page.py  order.py  product.py  user.py
server/src/services/: __init__.py  agent_expert.py  websocket_manager.py
server/tests/: __init__.py  conftest.py  test_agent_expert.py
(+11 files in other folders)
